Rasha: Update spring version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=UserManagement
 server.port=8081
 
 #Set default spring security
-spring.security.user.name=admin
-spring.security.user.password=password
+#spring.security.user.name=admin
+#spring.security.user.password=password
 
 # Set the root logging level
 logging.level.root=DEBUG
